--- a/page-depth-01/CP-aux.html
+++ b/page-depth-01/CP-aux.html
@@ -361,7 +361,7 @@
 
                 <div class="container">
 
-                    <div class="img-container" style="height: 200px;">
+                    <div class="img-container" style="height: 300px;margin: auto;">
                         <img src="../images/cf-streams.webp" alt="Codeforces Streams Page">
                         <!-- <div class="scroll-indicator">Scroll down to see more</div> -->
                     </div>
@@ -462,44 +462,57 @@
         <div class="popup-menu-categories">
             <div class="popup-menu-category" align="center">
                 <div class="category-title">#include &ltbit/stdc++.h&gt</div>
-                <div class="link-item"style="background-color: #ffffff;">
+                <div class="link-item" style="background-color: #ffffff;">
                     <!-- <p style="background-color: #ffffff;"> -->
-                        <a href="https://judge.beecrowd.com/en" target="_blank" style="color: #000000ab;"><img src="../images\logo-beecrowd.webp" height="40" width="66.21"><br><i><small>(for learning the fundamentals)</small></i>
-                        </a>
+                    <a href="https://judge.beecrowd.com/en" target="_blank" style="color: #000000ab;"><img
+                            src="../images\logo-beecrowd.webp" height="40" width="66.21"><br><i><small>(for learning the
+                                fundamentals)</small></i>
+                    </a>
                     <!-- </p> -->
                 </div>
                 <div class="link-item" style="background-color: #ffffff;">
-                    <a href="https://www.hackerrank.com/" target="_blank" style="color: #000000ab;"><img src="../images\hackerrank.svg" height="40" width="150"><br><i><small>( for learning STL concepts)</small></i>
-                        </a>
+                    <a href="https://www.hackerrank.com/" target="_blank" style="color: #000000ab;"><img
+                            src="../images\hackerrank.svg" height="40" width="150"><br><i><small>( for learning STL
+                                concepts)</small></i>
+                    </a>
                 </div>
                 <div class="link-item" style="background-color: #ffffff;">
-                   <a href="https://codeforces.com/" target="_blank"style="color: #000000ab;"><img src="../images\codeforces-sponsored-by-ton.webp" height="40" width="170.77"><br><i><small>(for participating contests with unique problem sets)</small></i>
-                        </a>
+                    <a href="https://codeforces.com/" target="_blank" style="color: #000000ab;"><img
+                            src="../images\codeforces-sponsored-by-ton.webp" height="40"
+                            width="170.77"><br><i><small>(for participating contests with unique problem
+                                sets)</small></i>
+                    </a>
                 </div>
-                
+
                 <div class="link-item" style="background-color: #ffffff;">
-                    <a href="https://leetcode.com/" target="_blank"style="color: #000000ab;"><img src="../images\LeetCode_Logo.webp" height="30" width="123.67"><br><i><small>(a great platform for job preparation)</small></i>
-                        </a>
+                    <a href="https://leetcode.com/" target="_blank" style="color: #000000ab;"><img
+                            src="../images\LeetCode_Logo.webp" height="30" width="123.67"><br><i><small>(a great
+                                platform for job preparation)</small></i>
+                    </a>
                 </div>
-                <div class="link-item" >
-                    <a href="https://vjudge.net/" target="_blank" >
+                <div class="link-item">
+                    <a href="https://vjudge.net/" target="_blank">
                         Virtual Judge<br><i><small>(for organizing contests)</small></i>
                     </a>
                 </div>
-                <div class="link-item" >
-                    <a href="https://toph.co/" target="_blank"><img src="../images\toph.webp"  height="30" width="100"><br><i><small>(for practicing topic-wise problems)</small></i>
-                        </a>
+                <div class="link-item">
+                    <a href="https://toph.co/" target="_blank"><img src="../images\toph.webp" height="30"
+                            width="100"><br><i><small>(for practicing topic-wise problems)</small></i>
+                    </a>
                 </div>
                 <div class="link-item">
                     <a href="https://www.codechef.com/" target="_blank">
-                        <img src="../images\codechef.svg" width="100.00" height="40"><br><i><small>(similar to Codeforces)</small></i>
-                        </a>
+                        <img src="../images\codechef.svg" width="100.00" height="40"><br><i><small>(similar to
+                                Codeforces)</small></i>
+                    </a>
                 </div>
                 <div class="link-item" style="background-color: #ffffff;">
-                    <a href="https://atcoder.jp/" target="_blank" style="color: #000000ab;"><img src="../images\atcoder.webp" height="40" width="49.22"><br><i><small>(similar to Codeforces)</small></i>
-                        </a>
+                    <a href="https://atcoder.jp/" target="_blank" style="color: #000000ab;"><img
+                            src="../images\atcoder.webp" height="40" width="49.22"><br><i><small>(similar to
+                                Codeforces)</small></i>
+                    </a>
                 </div>
-                
+
                 <!-- <table align=center class="resources-table-5" style="width: 105%;">
                     <tr>
                         <td>
@@ -508,16 +521,14 @@
                                 <div class="img-container" style="height: 200px">
                                     <img src="../images/code-sites.webp" alt="Codeforces Streams Page"
                                         style="border-radius: 5px 5px 5px 5px;">
-                                    <!-- <div class="scroll-indicator">Scroll down to see more</div> -->
-                                </div>
-                            </div>
-                        </td>
-
-                    </tr>
-                </table> -->
-                <!-- More links here -->
+                                     <div class="scroll-indicator">Scroll down to see more</div> -->
             </div>
         </div>
+        <!-- </td>
+
+        </tr>
+        </table>  -->
+        <!-- More links here -->
     </div>
 
     <!-- Shared backdrop for all popups -->
