--- a/page-depth-01/References.html
+++ b/page-depth-01/References.html
@@ -271,7 +271,7 @@
                         <td>-</td>
                         <td>
                             <div class="link-group">
-                                <a href="https://nurulalamador.github.io/UIUQuestionBank/">UIU Question Bank</a>
+                                <a href="https://nurulalamador.github.io/UIUQuestionBank/" target="_blank">UIU Question Bank</a>
                                 
                             </div>
                         </td>
@@ -281,9 +281,9 @@
                         <td>-</td>
                         <td>
                             <div class="link-group">
-                                <a href="https://diuqbank.com/">DIU Question Bank</a>
-                                <a href="https://routine.zohirrayhan.me/">DIU Routine Scrapper</a> 
-                                <small><a href="https://play.google.com/store/apps/details?id=com.zohirrayhan.routinescrapper">(PlayStore
+                                <a href="https://diuqbank.com/" target="_blank">DIU Question Bank</a>
+                                <a href="https://routine.zohirrayhan.me/" target="_blank">DIU Routine Scrapper</a> 
+                                <small><a href="https://play.google.com/store/apps/details?id=com.zohirrayhan.routinescrapper" target="_blank">(PlayStore
                                     App)</a></small>
                             </div>
                         </td>
@@ -292,13 +292,13 @@
                         <td>BRACU</td>
                         <td>
                             <div class="link-group">
-                                <a href="https://library.bracu.ac.bd/">Library</a>
-                                <a href="https://www.bracu.ac.bd/students">Student Facilities</a>
+                                <a href="https://library.bracu.ac.bd/" target="_blank">Library</a>
+                                <a href="https://www.bracu.ac.bd/students" target="_blank">Student Facilities</a>
                             </div>
                         </td>
                         <td>
                             <div class="link-group">
-                                <a href="https://gangupnow.com/">Gang Up</a>
+                                <a href="https://gangupnow.com/ " target="_blank">Gang Up</a>
                                 
                             </div>
                         </td>
@@ -306,7 +306,7 @@
                     <tr>
                         <td>IUT</td>
                         <td>
-                            <a href="https://www.iutoic-dhaka.edu/e-resources">E Resources</a>
+                            <a href="https://www.iutoic-dhaka.edu/e-resources" target="_blank">E Resources</a>
                         </td>
                         <td>-</td>
                     </tr>
@@ -314,11 +314,11 @@
                         <td>AUST</td>
                         <td>
                             <div class="link-group">
-                                <a href="https://aust.edu/library/e_resources">E Resources</a>
-                                <a href="https://onlinelibrary.wiley.com/action/showPublications">E
+                                <a href="https://aust.edu/library/e_resources" target="_blank">E Resources</a>
+                                <a href="https://onlinelibrary.wiley.com/action/showPublications" target="_blank">E
                                     Books</a>
-                                <a href="https://www.scopus.com/home.uri">Scopus</a>
-                                <a href="https://www.turnitin.com/">Turnitin</a>
+                                <a href="https://www.scopus.com/home.uri" target="_blank">Scopus</a>
+                                <a href="https://www.turnitin.com/" target="_blank">Turnitin</a>
                             </div>
                         </td>
                         <td>-</td>
@@ -327,8 +327,8 @@
                         <td>NSU</td>
                         <td>
                             <div class="link-group">
-                                <a href="https://www.northsouth.edu/archive.html">Archive</a>
-                                <a href="https://library.northsouth.edu/">Library</a>
+                                <a href="https://www.northsouth.edu/archive.html" target="_blank">Archive</a>
+                                <a href="https://library.northsouth.edu/" target="_blank">Library</a>
                             </div>
                         </td>
                         <td>-</td>
@@ -355,9 +355,9 @@
                         <td>IUB</td>
                         <td>
                             <div class="link-group">
-                                <a href="https://ar.iub.edu.bd/">Academic Repository</a>
-                                <a href="https://library.iub.edu.bd/">Library & E-Resources</a>
-                                <a href="https://iub.ac.bd/directory">Directory</a>
+                                <a href="https://ar.iub.edu.bd/" target="_blank">Academic Repository</a>
+                                <a href="https://library.iub.edu.bd/" target="_blank">Library & E-Resources</a>
+                                <a href="https://iub.ac.bd/directory" target="_blank">Directory</a>
                             </div>
                         </td>
                         <td>-</td>
