--- a/page-depth-01/CSE-Files.html
+++ b/page-depth-01/CSE-Files.html
@@ -30,13 +30,29 @@
         <a class="active-1" href="References.html">
             <small>Project<br>References</small>
         </a>
-        <a class="active-1" href="Blog.html">
+        <!-- <a class="active-1" href="Blog.html">
             <small>CSE<br>Blog</small>
         </a>
         <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
             target="_blank">
             <small>oUITS<br>G-Drive</small>
-        </a>
+        </a> -->
+        <div class="dropdown">
+            <button class="dropbtn" onclick="toggleDropdown(this)"><small>More<br>Projects</small></button>
+            <!-- <button class="dropbtn">Quick<br>Links</button> -->
+            <div class="dropdown-content">
+              <!-- APK LINK -->
+              <div class="navigation1" style="background-color: #0000009b;"></div>
+              <script src="apk-link.js"></script>
+              <a style="color: black;" class="active-1" href="https://ouits-schedule.netlify.app/" target="blank">
+                <small>oUITS<br>Scheduler</small>
+              </a>
+              <a style="color: black;" class="active-1"
+                href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing" target="_blank">
+                <small>oUITS<br>G-Drive</small>
+              </a>
+            </div>
+          </div>
     </div>
 
 
