Made top bas consistent in all pages
at least tried to

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <small>CSE<br>Blog</small>
     </a>
     <div class="dropdown">
-      <button class="dropbtn" onclick="toggleDropdown(this)"><small>More<br>Projects</small></button>
+      <button class="dropbtn" onclick="toggleDropdown(this)">More<br>Projects</button>
       <!-- <button class="dropbtn">Quick<br>Links</button> -->
       <div class="dropdown-content">
         <!-- APK LINK -->
