--- a/page-depth-01/Blog.html
+++ b/page-depth-01/Blog.html
@@ -258,24 +258,71 @@
 
     <div class="topnav-1">
         <!-- APK LINK -->
-        <div class="navigation1"
+        <!-- <div class="navigation1"
             style="display: flex;justify-content: flex-end;background-color: #333;min-height: 50px;width: 100%;"></div>
-        <script src="../apk-link.js"></script>
-        
+        <script src="../apk-link.js"></script> -->
+
         <a class="active-1" href="Tutorials.html">
             <small>Resources<br>Tutorials</small>
         </a>
         <a class="active-1" href="References.html">
             <small>Project<br>References</small>
         </a>
-        <a class="active-1" href="#">
+       <a class="active-1" href="Blog.html">
             <small>CSE<br>Blog</small>
         </a>
-        <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
+        <!--  <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
             target="_blank">
             <small>oUITS<br>G-Drive</small>
-        </a>
+        </a> -->
+        <div class="dropdown">
+            <button class="dropbtn" onclick="toggleDropdown(this)">More<br>Projects</button>
+            <!-- <button class="dropbtn">Quick<br>Links</button> -->
+            <div class="dropdown-content">
+                <!-- APK LINK -->
+                <div class="navigation1" style="background-color: #0000009b;"></div>
+                <script src="apk-link.js"></script>
+                <a style="color: black;" class="active-1" href="https://ouits-schedule.netlify.app/" target="blank">
+                    <small>oUITS<br>Scheduler</small>
+                </a>
+                <a style="color: black;" class="active-1"
+                    href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
+                    target="_blank">
+                    <small>oUITS<br>G-Drive</small>
+                </a>
+            </div>
+        </div>
     </div>
+    <script>
+        // Improved dropdown toggle function
+        function toggleDropdown(button) {
+            // Get the dropdown content element
+            var dropdownContent = button.nextElementSibling;
+
+            // Toggle the current dropdown
+            dropdownContent.classList.toggle("show");
+
+            // Close all other dropdowns
+            document.querySelectorAll(".dropdown-content.show").forEach(function (openDropdown) {
+                if (openDropdown !== dropdownContent) {
+                    openDropdown.classList.remove("show");
+                }
+            });
+        }
+
+        // Add a global click event to close dropdowns when clicking outside
+        document.addEventListener("click", function (event) {
+            if (!event.target.matches('.dropbtn')) {
+                document.querySelectorAll(".dropdown-content.show").forEach(function (dropdown) {
+                    dropdown.classList.remove("show");
+                });
+            } else {
+                // Stop event from reaching the document listener when clicking a button
+                event.stopPropagation();
+            }
+        });
+    </script>
+
 
     <!-- BOTTOM BAR "navbar" -->
 
@@ -335,8 +382,8 @@
             <tr>
                 <td>
                     <p><a href="https://b1tranger-coding.blogspot.com/" target="_blank">
-                        <i>b1tranger</i>'s @blogspot
-                    </a></p>
+                            <i>b1tranger</i>'s @blogspot
+                        </a></p>
                 </td>
             </tr>
 
@@ -354,7 +401,7 @@
                         Mrinmoy Biswas Akash @blogspot
                     </a>
                 </div>
-<!--                 <div class="link-item">
+                <!--                 <div class="link-item">
                     <a href="#" target="_blank">
                         #
                     </a>
@@ -377,7 +424,7 @@
                         YouKn0wWho @codeforces
                     </a>
                 </div>
-<!--                 <div class="link-item">
+                <!--                 <div class="link-item">
                     <a href="#" target="_blank">
                         #
                     </a>
@@ -402,7 +449,7 @@
                         r/programming @reddit
                     </a>
                 </div>
-<!--                 <div class="link-item">
+                <!--                 <div class="link-item">
                     <a href="#" target="_blank">
                         #
                     </a>
