--- a/page-depth-01/CSE-Files.html
+++ b/page-depth-01/CSE-Files.html
@@ -20,9 +20,9 @@
 
     <div class="topnav-1">
         <!-- APK LINK -->
-        <div class="navigation1"
+        <!-- <div class="navigation1"
             style="display: flex;justify-content: flex-end;background-color: #333;min-height: 50px;width: 100%;"></div>
-        <script src="../apk-link.js"></script>
+        <script src="../apk-link.js"></script> -->
 
         <a class="active-1" href="Tutorials.html">
             <small>Resources<br>Tutorials</small>
@@ -30,31 +30,60 @@
         <a class="active-1" href="References.html">
             <small>Project<br>References</small>
         </a>
-        <!-- <a class="active-1" href="Blog.html">
+        <a class="active-1" href="Blog.html">
             <small>CSE<br>Blog</small>
         </a>
-        <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
+        <!-- <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
             target="_blank">
             <small>oUITS<br>G-Drive</small>
         </a> -->
         <div class="dropdown">
-            <button class="dropbtn" onclick="toggleDropdown(this)"><small>More<br>Projects</small></button>
+            <button class="dropbtn" onclick="toggleDropdown(this)">More<br>Projects</button>
             <!-- <button class="dropbtn">Quick<br>Links</button> -->
             <div class="dropdown-content">
-              <!-- APK LINK -->
-              <div class="navigation1" style="background-color: #0000009b;"></div>
-              <script src="apk-link.js"></script>
-              <a style="color: black;" class="active-1" href="https://ouits-schedule.netlify.app/" target="blank">
-                <small>oUITS<br>Scheduler</small>
-              </a>
-              <a style="color: black;" class="active-1"
-                href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing" target="_blank">
-                <small>oUITS<br>G-Drive</small>
-              </a>
+                <!-- APK LINK -->
+                <div class="navigation1" style="background-color: #0000009b;"></div>
+                <script src="../apk-link.js"></script>
+                <a style="color: black;" class="active-1" href="https://ouits-schedule.netlify.app/" target="blank">
+                    <small>oUITS<br>Scheduler</small>
+                </a>
+                <a style="color: black;" class="active-1"
+                    href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
+                    target="_blank">
+                    <small>oUITS<br>G-Drive</small>
+                </a>
             </div>
-          </div>
+        </div>
     </div>
+    <script>
+        // Improved dropdown toggle function
+        function toggleDropdown(button) {
+            // Get the dropdown content element
+            var dropdownContent = button.nextElementSibling;
 
+            // Toggle the current dropdown
+            dropdownContent.classList.toggle("show");
+
+            // Close all other dropdowns
+            document.querySelectorAll(".dropdown-content.show").forEach(function (openDropdown) {
+                if (openDropdown !== dropdownContent) {
+                    openDropdown.classList.remove("show");
+                }
+            });
+        }
+
+        // Add a global click event to close dropdowns when clicking outside
+        document.addEventListener("click", function (event) {
+            if (!event.target.matches('.dropbtn')) {
+                document.querySelectorAll(".dropdown-content.show").forEach(function (dropdown) {
+                    dropdown.classList.remove("show");
+                });
+            } else {
+                // Stop event from reaching the document listener when clicking a button
+                event.stopPropagation();
+            }
+        });
+    </script>
 
     <!-- BOTTOM BAR "navbar" -->
 
@@ -152,7 +181,7 @@
     <div align=center>
         <p align="center" style="width: 80%;color: #8c8c8c;">
             <!-- <b><small>Most of this files are in relevance with CSE-55 batch</small></b> -->
-                    <br><small style="font-size: x-small;">Take Note that Files may be
+            <br><small style="font-size: x-small;">Take Note that Files may be
                 outdated or
                 not organized to the latest course list.<br>In that case, please email me
                 at <a href="mailto:b1tranger.01@gmail.com" target="_blank"
@@ -160,7 +189,8 @@
                 shortcomings of this page.
                 <br><br>Thanks in
                 advance!!
-            </small></p>
+            </small>
+        </p>
 
     </div>
 
