--- a/page-depth-01/Tutorials.html
+++ b/page-depth-01/Tutorials.html
@@ -262,9 +262,9 @@
 
     <div class="topnav-1">
         <!-- APK LINK -->
-        <div class="navigation1"
+        <!-- <div class="navigation1"
             style="display: flex;justify-content: flex-end;background-color: #333;min-height: 50px;width: 100%;"></div>
-        <script src="../apk-link.js"></script>
+        <script src="../apk-link.js"></script> -->
         <a class="active-1" href="#">
             <small>Resources<br>Tutorials</small>
         </a>
@@ -274,11 +274,57 @@
         <a class="active-1" href="Blog.html">
             <small>CSE<br>Blog</small>
         </a>
-        <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
+        <!-- <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
             target="_blank">
             <small>oUITS<br>G-Drive</small>
-        </a>
+        </a> -->
+        <div class="dropdown">
+            <button class="dropbtn" onclick="toggleDropdown(this)">More<br>Projects</button>
+            <!-- <button class="dropbtn">Quick<br>Links</button> -->
+            <div class="dropdown-content">
+                <!-- APK LINK -->
+                <div class="navigation1" style="background-color: #0000009b;"></div>
+                <script src="apk-link.js"></script>
+                <a style="color: black;" class="active-1" href="https://ouits-schedule.netlify.app/" target="blank">
+                    <small>oUITS<br>Scheduler</small>
+                </a>
+                <a style="color: black;" class="active-1"
+                    href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
+                    target="_blank">
+                    <small>oUITS<br>G-Drive</small>
+                </a>
+            </div>
+        </div>
     </div>
+    <script>
+        // Improved dropdown toggle function
+        function toggleDropdown(button) {
+            // Get the dropdown content element
+            var dropdownContent = button.nextElementSibling;
+
+            // Toggle the current dropdown
+            dropdownContent.classList.toggle("show");
+
+            // Close all other dropdowns
+            document.querySelectorAll(".dropdown-content.show").forEach(function (openDropdown) {
+                if (openDropdown !== dropdownContent) {
+                    openDropdown.classList.remove("show");
+                }
+            });
+        }
+
+        // Add a global click event to close dropdowns when clicking outside
+        document.addEventListener("click", function (event) {
+            if (!event.target.matches('.dropbtn')) {
+                document.querySelectorAll(".dropdown-content.show").forEach(function (dropdown) {
+                    dropdown.classList.remove("show");
+                });
+            } else {
+                // Stop event from reaching the document listener when clicking a button
+                event.stopPropagation();
+            }
+        });
+    </script>
 
     <!-- BOTTOM BAR "navbar" -->
 
@@ -297,7 +343,7 @@
                 <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">other tutorials
                 </p>
             </tr>
-            
+
             <tr>
                 <!-- 3rd container with different menu button -->
                 <td class="menu-button" id="menuButton3" align="center" style="color: rgba(240, 248, 255, 0.85);">
@@ -311,14 +357,17 @@
             <tr>
                 <td style="background-color: rgba(240, 248, 255, 0);">
 
-                    <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">personal tutorials</p>
+                    <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">personal tutorials
+                    </p>
                 </td>
             </tr>
             <tr>
-                <td><p>
-                    <a href="page-depth-02/My-guides.html">
-                        b1tranger @YT
-                    </a></p>
+                <td>
+                    <p>
+                        <a href="page-depth-02/My-guides.html">
+                            b1tranger @YT
+                        </a>
+                    </p>
                 </td>
             </tr>
             <tr><!-- 2ndcontainer with menu button -->
@@ -331,8 +380,8 @@
         </table>
     </div>
 
-       <!-- First popup -->
-       <div class="popup-menu" id="popupMenu1"  style="max-width:70%;">
+    <!-- First popup -->
+    <div class="popup-menu" id="popupMenu1" style="max-width:70%;">
         <div class="popup-close popup-close-btn"></div>
         <!-- <div class="popup-menu-title">Resources & Tools</div> -->
         <div class="popup-menu-categories">
@@ -415,7 +464,7 @@
             document.addEventListener('DOMContentLoaded', function () {
                 // Button and popup pairs
                 const menuPairs = [
-                     { button: 'menuButton1', popup: 'popupMenu1' },
+                    { button: 'menuButton1', popup: 'popupMenu1' },
                     //  { button: 'menuButton2', popup: 'popupMenu2' },
                     { button: 'menuButton3', popup: 'popupMenu3' }
                     //  { button: 'menuButton4', popup: 'popupMenu4' }
