--- a/page-depth-01/References.html
+++ b/page-depth-01/References.html
@@ -160,7 +160,7 @@
             <div class="dropdown-content">
                 <!-- APK LINK -->
                 <div class="navigation1" style="background-color: #0000009b;"></div>
-                <script src="apk-link.js"></script>
+                <script src="../apk-link.js"></script>
                 <a style="color: black;" class="active-1" href="https://ouits-schedule.netlify.app/" target="blank">
                     <small>oUITS<br>Scheduler</small>
                 </a>
