--- a/page-depth-01/page-depth-02/S07.html
+++ b/page-depth-01/page-depth-02/S07.html
@@ -28,7 +28,7 @@
      <a class="active-1" href="Blog.html">
             <small>CSE<br>Blog</small>
         </a>
-        <<!--a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
+        <!--a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
             target="_blank">
             <small>oUITS<br>G-Drive</small>
         </a> -->
@@ -38,7 +38,7 @@
           <div class="dropdown-content">
               <!-- APK LINK -->
               <div class="navigation1" style="background-color: #0000009b;"></div>
-              <script src="apk-link.js"></script>
+              <script src="../../apk-link.js"></script>
               <a style="color: black;" class="active-1" href="https://ouits-schedule.netlify.app/" target="blank">
                   <small>oUITS<br>Scheduler</small>
               </a>
