tried to fix clickable whole buttons

--- a/index.html
+++ b/index.html
@@ -102,38 +102,43 @@
   <!-- HIGHLIGHTS OF DRIVE -->
 
   <div class="container-5" style="width:76%;">
-    <table class="resources-table-5" align="center" style="width:90%;">
+    <table class="resources-table-5" align="center" style="width:90%; margin: auto;">
       <tr>
-        <p class="highlights-5" align="center" style="color: rgba(240, 248, 255, 0.649);">Browse Resources</p>
+        <td colspan="4" style="background-color: #00000000;">
+          <p class="highlights-5" align="center" style="color: rgba(240, 248, 255, 0.649);">Browse Resources</p>
+        </td>
       </tr>
       <tr>
         <td>
-          <p>
-            <a href="page-depth-01/CSE-Files.html">
-              CSE Files
-            </a>
-          </p>
+          <a href="page-depth-01/CSE-Files.html" class="cell-link">
+            CSE files
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          </a>
         </td>
         <td>
-          <p>
-            <a href="page-depth-01/General-Info.html">
-              General Information
+          <!-- <p> -->
+          <a href="page-depth-01/General-Info.html" class="cell-link">
+            General Information
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             </a>
-          </p>
+            <!-- </p> -->
         </td>
         <td>
-          <p>
-            <a href="page-depth-01\CP-aux.html">
-              Programming
+          <!-- <p> -->
+          <a href="page-depth-01\CP-aux.html" class="cell-link">
+            Programming
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <!-- </p> -->
         </td>
-        </p>
+
 
         <td>
-          <p>
-            <a href="page-depth-01\Curated-Resources.html">
-              Resources Dump
-            </a>
-          </p>
+          <!-- <p> -->
+          <a href="page-depth-01\Curated-Resources.html" class="cell-link">
+            Resources Dump
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          </a>
+          <!-- </p> -->
         </td>
       </tr>
     </table>
