fixed whole button being clickable
@media (max-width: 768px) {
  .resources-table-5 {
    display: flex;
    flex-direction: column;
  }

  .resources-table-5 tr {
    display: flex;
    flex-direction: column;
  }

  .resources-table-5 td {
    margin: 5px 0;
    width: 90%;
    margin-left: auto;
    margin-right: auto;
  }
}

--- a/index.html
+++ b/index.html
@@ -112,14 +112,14 @@
         <td>
           <a href="page-depth-01/CSE-Files.html" class="cell-link">
             CSE files
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
           </a>
         </td>
         <td>
           <!-- <p> -->
           <a href="page-depth-01/General-Info.html" class="cell-link">
             General Information
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
             </a>
             <!-- </p> -->
         </td>
@@ -127,7 +127,7 @@
           <!-- <p> -->
           <a href="page-depth-01\CP-aux.html" class="cell-link">
             Programming
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
             <!-- </p> -->
         </td>
 
@@ -136,7 +136,7 @@
           <!-- <p> -->
           <a href="page-depth-01\Curated-Resources.html" class="cell-link">
             Resources Dump
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
           </a>
           <!-- </p> -->
         </td>
