fixed other pages under cse files
Let's fix that clicking effect on mobile browsers. Mobile browsers often show tap highlights or focus effects that need to be explicitly disabled:
added several properties specifically to address mobile tap effects:

Added -webkit-tap-highlight-color: transparent; to eliminate the tap highlight color that appears on many mobile browsers (especially Safari)

/* Base link styling */
.resources-table-5 .cell-link {
  color: #ffffffba;
  text-decoration: none;
  display: block;
  text-align: center;
  padding: 12px;
  transition: color 0.3s ease;
  width: 100%;
  box-sizing: border-box;

  /* Disable mobile tap highlight */
  -webkit-tap-highlight-color: transparent;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  user-select: none;
  outline: none;
}

/* Add rules for all link states to maintain the same color */
.resources-table-5 .cell-link:link,
.resources-table-5 .cell-link:visited,
.resources-table-5 .cell-link:active,
.resources-table-5 .cell-link:focus {
  color: #ffffffba; /* Keep the same color for all states */
  outline: none;
}

--- a/page-depth-01/CSE-Files.html
+++ b/page-depth-01/CSE-Files.html
@@ -115,54 +115,70 @@
         <table class="resources-table-5" align=center style="width:90%;">
             <tr>
                 <td>
-                    <p> <a href="page-depth-02/S01.html">
+                    <!-- <p>  -->
+                        <a href="page-depth-02/S01.html" class="cell-link">
                             1st Semester
-                        </a></p>
+                        </a>
+                    <!-- </p> -->
                 </td>
                 <td>
-                    <p> <a href="page-depth-02/S02.html">
+                    <!-- <p>  -->
+                        <a href="page-depth-02/S02.html" class="cell-link">
                             2nd Semester
-                        </a></p>
+                        </a>
+                    <!-- </p> -->
                 </td>
             </tr>
             <tr>
                 <td>
-                    <p> <a href="page-depth-02/S03.html">
+                    <!-- <p> -->
+                         <a href="page-depth-02/S03.html" class="cell-link">
                             3rd Semester
-                        </a></p>
+                        </a>
+                    <!-- </p> -->
                 </td>
 
                 <td>
-                    <p> <a href="page-depth-02/S04.html">
+                    <!-- <p>  -->
+                        <a href="page-depth-02/S04.html" class="cell-link">
                             4th Semester
-                        </a></p>
+                        </a>
+                    <!-- </p> -->
                 </td>
             </tr>
             <tr>
                 <td>
-                    <p> <a href="page-depth-02/S05.html">
+                    <!-- <p>  -->
+                        <a href="page-depth-02/S05.html" class="cell-link">
                             5th Semester
-                        </a></p>
+                        </a>
+                    <!-- </p> -->
                 </td>
 
 
                 <td>
-                    <p> <a href="page-depth-02/S06.html">
+                    <!-- <p>  -->
+                        <a href="page-depth-02/S06.html" class="cell-link">
                             6th Semester
-                        </a></p>
+                        </a>
+                    <!-- </p> -->
                 </td>
             </tr>
             <tr>
                 <td>
-                    <p> <a href="page-depth-02/S07.html">
+                    <!-- <p>  -->
+                        <a href="page-depth-02/S07.html" class="cell-link">
                             7th Semester
-                        </a></p>
+                        </a>
+                    <!-- </p> -->
                 </td>
 
                 <td>
-                    <p> <a href="page-depth-02/S08.html">
+                    <!-- <p>  -->
+                        <a href="page-depth-02/S08.html" class="cell-link">
                             8th Semester
-                        </a></p>
+                        </a>
+                    <!-- </p> -->
                 </td>
 
             <tr>
