--- a/page-depth-01/page-depth-02/S07.html
+++ b/page-depth-01/page-depth-02/S07.html
@@ -104,20 +104,26 @@
       </tr>
       <tr>
         <td>
-          <p> <a href="https://drive.google.com/drive/folders/1aL6ZiJJBs8zLlgZ8qcSIg7z_FB88jSqa?usp=drive_link" target="_blank">S07
-            Books</a></p>
+          <!-- <p>  -->
+            <a href="https://drive.google.com/drive/folders/1aL6ZiJJBs8zLlgZ8qcSIg7z_FB88jSqa?usp=drive_link" target="_blank" class="cell-link">S07
+            Books</a>
+          <!-- </p> -->
         </td>
       </tr>
       <tr>
         <td>
-          <p> <a href="https://drive.google.com/drive/folders/1adHL_WuuOhrKF4fEUbu2Fsnmz-GaCX-L?usp=drive_link" target="_blank">S07
-            Outlines</a></p>
+          <!-- <p>  -->
+            <a href="https://drive.google.com/drive/folders/1adHL_WuuOhrKF4fEUbu2Fsnmz-GaCX-L?usp=drive_link" target="_blank" class="cell-link">S07
+            Outlines</a>
+          <!-- </p> -->
         </td>
       </tr>
       <tr>
         <td>
-          <p> <a href="https://drive.google.com/drive/folders/1fbhlci6rP_jFwwl9k2oMaOxqOlojjmae?usp=drive_link" target="_blank">S07
-            Questions</a></p>
+          <!-- <p>  -->
+            <a href="https://drive.google.com/drive/folders/1fbhlci6rP_jFwwl9k2oMaOxqOlojjmae?usp=drive_link" target="_blank" class="cell-link">S07
+            Questions</a>
+          <!-- </p> -->
         </td>
 
       </tr>
