--- a/page-depth-01/page-depth-02/S08.html
+++ b/page-depth-01/page-depth-02/S08.html
@@ -102,23 +102,29 @@
       </tr>
       <tr>
         <td>
-          <p> <a href="https://drive.google.com/drive/folders/1tk0VTCKn6lN7E9z6nwMchCBK3kf6XpPr?usp=drive_link"
-            target="_blank">S08
-            Books</a></p>
+          <!-- <p>  -->
+            <a href="https://drive.google.com/drive/folders/1tk0VTCKn6lN7E9z6nwMchCBK3kf6XpPr?usp=drive_link"
+            target="_blank" class="cell-link">S08
+            Books</a>
+          <!-- </p> -->
         </td>
       </tr>
       <tr>
         <td>
-          <p>  <a href="https://drive.google.com/drive/folders/1aKT3eqY5MncYlZzBQOMnDokaGhg2Ear0?usp=drive_link"
-            target="_blank">S08
-            Outlines</a></p>
+          <!-- <p>   -->
+            <a href="https://drive.google.com/drive/folders/1aKT3eqY5MncYlZzBQOMnDokaGhg2Ear0?usp=drive_link"
+            target="_blank" class="cell-link">S08
+            Outlines</a>
+          <!-- </p> -->
         </td>
       </tr>
       <tr>
         <td>
-          <p> <a href="https://drive.google.com/drive/folders/1aZEwrtBNlD1QnDkToy9E0I9XqWUulckF?usp=drive_link"
-            target="_blank">S08
-            Questions</a></p>
+          <!-- <p>  -->
+            <a href="https://drive.google.com/drive/folders/1aZEwrtBNlD1QnDkToy9E0I9XqWUulckF?usp=drive_link"
+            target="_blank" class="cell-link">S08
+            Questions</a>
+          <!-- </p> -->
         </td>
       </tr>
       <tr>
