--- a/page-depth-01/page-depth-02/S01.html
+++ b/page-depth-01/page-depth-02/S01.html
@@ -25,10 +25,10 @@
         <a class="active-1" href="../References.html">
             <small>Project<br>References</small>
         </a>
-       <a class="active-1" href="Blog.html">
+        <a class="active-1" href="Blog.html">
             <small>CSE<br>Blog</small>
         </a>
-         <!-- <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
+        <!-- <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
             target="_blank">
             <small>oUITS<br>G-Drive</small>
         </a> -->
@@ -79,7 +79,7 @@
             }
         });
     </script>
-    
+
 
 
 
@@ -103,39 +103,39 @@
             </tr>
             <tr>
                 <td>
-                    <p> <a href="https://drive.google.com/drive/folders/1a4dYGziykFyiGarcowV8rioWyIlAzvA1"
-                            target="_blank">
-                            S01 Notes <br>+ <small><b>Classroom Files</b></small>
-                        </a></p>
+                    <a href="https://drive.google.com/drive/folders/1a4dYGziykFyiGarcowV8rioWyIlAzvA1" target="_blank"
+                        class="cell-link">
+                        S01 Notes <br>+ <small><b>Classroom Files</b></small>
+                    </a>
                 </td>
 
                 <td>
-                    <p> <a href="https://drive.google.com/drive/folders/1aNeGzO__4pQiyohr7jADZYy7ODM3rC3t"
-                            target="_blank">
-                            S01 Books
-                        </a></p>
+                    <a href="https://drive.google.com/drive/folders/1aNeGzO__4pQiyohr7jADZYy7ODM3rC3t" target="_blank"
+                        class="cell-link">
+                        S01 Books
+                    </a>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <p> <a href="https://drive.google.com/drive/folders/14ecyN1EotbW1F-5Ulbk_9QbU3F0en8Cm"
-                            target="_blank">
-                            S01 Outlines
-                        </a></p>
+                    <a href="https://drive.google.com/drive/folders/14ecyN1EotbW1F-5Ulbk_9QbU3F0en8Cm" target="_blank"
+                        class="cell-link">
+                        S01 Outlines
+                    </a>
                 </td>
 
                 <td>
-                    <p> <a href="https://drive.google.com/drive/folders/1bI8ewiui3Cv09A5DWc59RwHADIQB_mnn"
-                            target="_blank">
-                            S01 Questions
-                        </a></p>
+                    <a href="https://drive.google.com/drive/folders/1bI8ewiui3Cv09A5DWc59RwHADIQB_mnn" target="_blank"
+                        class="cell-link">
+                        S01 Questions
+                    </a>
                 </td>
             </tr>
             <tr>
-                <td colspan="2" >
+                <td colspan="2">
                     <div class="container">
 
-                        <div class="img-container" style="height: 200px;" >
+                        <div class="img-container" style="height: 200px;">
                             <img src="S01 Course List.webp" alt="Codeforces Streams Page">
                             <!-- <div class="scroll-indicator">Scroll down to see more</div> -->
                         </div>
