--- a/page-depth-01/page-depth-02/S02.html
+++ b/page-depth-01/page-depth-02/S02.html
@@ -102,28 +102,28 @@
       </tr>
       <tr>
         <td>
-          <p> <a href="https://drive.google.com/drive/folders/1oCZr7uzvwOQL2ihchzd_K-I4cupaZ_Ix?usp=drive_link"
-              target="_blank">S02 Notes <br> <small>+ <b>Classroom Files</b></small></a>
+          <a href="https://drive.google.com/drive/folders/1oCZr7uzvwOQL2ihchzd_K-I4cupaZ_Ix?usp=drive_link"
+              target="_blank" class="cell-link">S02 Notes <br> <small>+ <b>Classroom Files</b></small></a>
         </td>
-        </p>
+        
 
         <td>
-          <p> <a href="https://drive.google.com/drive/folders/1oRIoBt5imfdKT2ecowlZx2dRj9bKi7eG?usp=drive_link"
-              target="_blank">S02
-              Books</a></p>
+          <a href="https://drive.google.com/drive/folders/1oRIoBt5imfdKT2ecowlZx2dRj9bKi7eG?usp=drive_link"
+              target="_blank" class="cell-link">S02
+              Books</a>
         </td>
       </tr>
       <tr>
         <td>
-          <p> <a href="https://drive.google.com/drive/folders/1o6ka61UmMUtnv3a9bsJ9xuv2h0Luacl2?usp=drive_link"
-              target="_blank">S02
-              Outlines</a></p>
+          <a href="https://drive.google.com/drive/folders/1o6ka61UmMUtnv3a9bsJ9xuv2h0Luacl2?usp=drive_link"
+              target="_blank" class="cell-link">S02
+              Outlines</a>
         </td>
 
         <td>
-          <p> <a href="https://drive.google.com/drive/folders/1aQTzW3HLHkhW3HsfjGBIPKWPq0uapmct?usp=drive_link"
-              target="_blank">S02
-              Questions</a></p>
+          <a href="https://drive.google.com/drive/folders/1aQTzW3HLHkhW3HsfjGBIPKWPq0uapmct?usp=drive_link"
+              target="_blank" class="cell-link">S02
+              Questions</a>
         </td>
       </tr>
       <tr>
