tried fixing button sizes
while disabling link click effect on mobile

--- a/page-depth-01/CP-aux.html
+++ b/page-depth-01/CP-aux.html
@@ -269,10 +269,10 @@
         <a class="active-1" href="References.html">
             <small>Project<br>References</small>
         </a>
-         <a class="active-1" href="Blog.html">
+        <a class="active-1" href="Blog.html">
             <small>CSE<br>Blog</small>
         </a>
-       <!-- <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
+        <!-- <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
             target="_blank">
             <small>oUITS<br>G-Drive</small>
         </a> -->
@@ -346,37 +346,38 @@
 
             <!-- First container with menu button -->
             <tr>
-                <td class="menu-button" id="menuButton1" align="center" style="color: rgba(240, 248, 255, 0.85);">
-                    <!-- <div class="menu-line"></div>
-                    <div class="menu-line"></div>
-                    <div class="menu-line"></div> -->
-                    <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Learning Websites
+                <td class="menu-button" id="menuButton1" align="center" style="color: rgba(240, 248, 255, 0.85);margin-left: auto;
+    margin-right: auto;">
+
+                    <p  class="cell-link" align="center" style="color: rgba(240, 248, 255, 0.649);padding: 5%;">
+                        Learning Websites
                     </p>
                 </td>
             </tr>
 
             <tr>
                 <!-- Second container with different menu button -->
-                <td class="menu-button" id="menuButton2" align="center" style="color: rgba(240, 248, 255, 0.85);">
-                    <!-- <div class="menu-line"></div>
-                    <div class="menu-line"></div>
-                    <div class="menu-line"></div> -->
-                    <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Programming Videos
+                <td class="menu-button" id="menuButton2" align="center" style="color: rgba(240, 248, 255, 0.85);margin-left: auto;
+    margin-right: auto;">
+
+                    <p  class="cell-link" align="center" style="color: rgba(240, 248, 255, 0.649);padding: 5%;">
+                        Programming Videos
                     </p>
                 </td>
             </tr>
             <tr>
-                <td class="menu-button" id="menuButton4" align="center" style="color: rgba(240, 248, 255, 0.85);">
-                    <!-- <div class="menu-line"></div>
-                    <div class="menu-line"></div>
-                    <div class="menu-line"></div> -->
-                    <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Online Judges
+                <td class="menu-button" id="menuButton4" align="center" style="color: rgba(240, 248, 255, 0.85);margin-left: auto;
+    margin-right: auto;">
+
+                    <p  class="cell-link" align="center" style="color: rgba(240, 248, 255, 0.649);padding: 5%;">Online
+                        Judges
                     </p>
                 </td>
             </tr>
             <tr>
-                <td class="menu-button" id="menuButton4" align="center" style="color: rgba(240, 248, 255, 0.85);">
-                    <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">
+                <td class="menu-button" id="menuButton4" align="center" style="color: rgba(240, 248, 255, 0.85);margin-left: auto;
+    margin-right: auto;">
+                    <p  class="cell-link" align="center" style="color: rgba(240, 248, 255, 0.649);padding: 5%;">
                         <a style="color: rgba(240, 248, 255, 0.649);"
                             href="https://drive.google.com/drive/folders/1n8wBkN1nAhpW3Z0eMkU9OlMNaPByp88F?usp=drive_link"
                             target="_blank">
