--- a/page-depth-01/Tutorials.html
+++ b/page-depth-01/Tutorials.html
@@ -346,34 +346,36 @@
 
             <tr>
                 <!-- 3rd container with different menu button -->
-                <td class="menu-button" id="menuButton3" align="center" style="color: rgba(240, 248, 255, 0.85);">
-                    <!-- <div class="menu-line"></div>
-                    <div class="menu-line"></div>
-                    <div class="menu-line"></div> -->
-                    <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">UITS-affiliate
-                    </p>
-                </td>
-            </tr>
-            <tr>
-                <td style="background-color: rgba(240, 248, 255, 0);">
+                <td class="menu-button" id="menuButton3" align="center" style="color: rgba(240, 248, 255, 0.85);margin-left: auto;
+                margin-right: auto;">
 
-                    <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">personal tutorials
+                    <p class="highlights" align="center"  style="color: rgba(240, 248, 255, 0.649);padding: 5%;">UITS-affiliate
                     </p>
                 </td>
             </tr>
             <tr>
-                <td>
-                    <p>
-                        <a href="page-depth-02/My-guides.html">
+                <td style="background-color: rgba(240, 248, 255, 0);margin-left: auto;
+                margin-right: auto;">
+
+                    <p class="cell-link" align="center" style="color: rgba(240, 248, 255, 0.649);padding: 5%;">personal tutorials
+                    </p>
+                </td>
+            </tr>
+            <tr>
+                <td  style="margin-left: auto;
+    margin-right: auto;">
+                    <!-- <p> -->
+                        <a class="cell-link" href="page-depth-02/My-guides.html">
                             b1tranger @YT
                         </a>
-                    </p>
+                    <!-- </p> -->
                 </td>
             </tr>
             <tr><!-- 2ndcontainer with menu button -->
-                <td class="menu-button" id="menuButton1" align="center" style="color: rgba(240, 248, 255, 0.85);">
+                <td class="menu-button" id="menuButton1" align="center" style="color: rgba(240, 248, 255, 0.85);margin-left: auto;
+                margin-right: auto;">
 
-                    <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">People I want to
+<p class="cell-link" align="center" style="color: rgba(240, 248, 255, 0.649);padding: 5%;">People I want to
                         keep following</p>
                 </td>
             </tr>
