--- a/page-depth-01/Curated-Resources.html
+++ b/page-depth-01/Curated-Resources.html
@@ -343,39 +343,42 @@
                     Curated-Resources<br><br></p>
             </tr>
             <tr>
-                <td>
-                    <p>
-                        <a href="https://drive.google.com/drive/folders/1tKdvGoeoYQJ6ms-p7ZPlA2EvYPJ4SWFt"
+                <td style="margin-left: auto;
+    margin-right: auto;">
+                    <!-- <p> -->
+                        <a class="cell-link" href="https://drive.google.com/drive/folders/1tKdvGoeoYQJ6ms-p7ZPlA2EvYPJ4SWFt"
                             target="_blank">
                             Programming References
                         </a>
-                    </p>
+                    <!-- </p> -->
                 </td>
             </tr>
             <tr>
-                <td>
-                    <p>
-                        <a href="https://drive.google.com/drive/folders/1RyEfnky5cr22HnjMu5qnm3q8loP2jIqa"
+                <td style="margin-left: auto;
+    margin-right: auto;">
+                    <!-- <p> -->
+                        <a class="cell-link" href="https://drive.google.com/drive/folders/1RyEfnky5cr22HnjMu5qnm3q8loP2jIqa"
                             target="_blank">
                             Curated Book List
                         </a>
-                    </p>
+                    <!-- </p> -->
                 </td>
             </tr>
             <tr>
-                <td>
-                    <p>
-                        <a href="page-depth-02\Resources-Dump.html">
+                <td style="margin-left: auto;
+    margin-right: auto;">
+                    <!-- <p> -->
+                        <a class="cell-link" href="page-depth-02\Resources-Dump.html">
                             Saraf's Resources List
                         </a>
-                    </p>
+                    <!-- </p> -->
                 </td>
             </tr>
-            <td style="background-color: rgba(240, 248, 255, 0);">
+            <td style="background-color: rgba(240, 248, 255, 0);margin: auto;">
 
-                <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">
-                    <hr>
-                </p>
+                <!-- <p  style="color: rgba(240, 248, 255, 0.649);justify-content: center;"> -->
+                    <br><hr><br>
+                <!-- </p> -->
 
             </td>
             </tr>
@@ -383,28 +386,32 @@
             <!-- ------------------------------------------------------------------------ -->
             <!-- ------------------------------------------------------------------------ -->
             <tr><!-- 3rd container with menu button -->
-                <td class="menu-button" id="menuButton3" align="center" style="color: rgba(240, 248, 255, 0.85);">
-                    <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Career Guides
+                <td class="menu-button" id="menuButton3" align="center" style="color: rgba(240, 248, 255, 0.85);margin-left: auto;
+                margin-right: auto;">
+                    <p class="cell-link" align="center" style="color: rgba(240, 248, 255, 0.649);padding: 5%;">Career Guides
                     </p>
                 </td>
             </tr>
             <tr><!-- 1st container with different menu button -->
-                <td class="menu-button" id="menuButton2" align="center" style="color: rgba(240, 248, 255, 0.85);">
+                <td class="menu-button" id="menuButton2" align="center" style="color: rgba(240, 248, 255, 0.85);margin-left: auto;
+                margin-right: auto;">
 
-                    <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Open Source Learning
+                    <p  class="cell-link" align="center" style="color: rgba(240, 248, 255, 0.649);padding: 5%;">Open Source Learning
                     </p>
                 </td>
             </tr>
             <tr><!-- 3rd container with menu button -->
-                <td class="menu-button" id="menuButton1" align="center" style="color: rgba(240, 248, 255, 0.85);">
-                    <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Softwares
+                <td class="menu-button" id="menuButton1" align="center" style="color: rgba(240, 248, 255, 0.85);margin-left: auto;
+                margin-right: auto;">
+                    <p class="cell-link" align="center" style="color: rgba(240, 248, 255, 0.649);padding: 5%;"">Softwares
                     </p>
                 </td>
             </tr>
             <tr><!-- 4th container with menu button -->
-                <td class="menu-button" id="menuButton4" align="center" style="color: rgba(240, 248, 255, 0.85);">
+                <td class="menu-button" id="menuButton4" align="center" style="color: rgba(240, 248, 255, 0.85);margin-left: auto;
+                margin-right: auto;">
 
-                    <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">UITS Archive</p>
+                    <p class="cell-link" align="center" style="color: rgba(240, 248, 255, 0.649);padding: 5%;"">UITS Archive</p>
                 </td>
             </tr>
         </table>
