--- a/page-depth-01/General-Info.html
+++ b/page-depth-01/General-Info.html
@@ -352,66 +352,73 @@
                 <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Find your info here</p>
             </tr>
             <tr>
-                <td class="menu-button" id="menuButton1" align="center" style="color: rgba(240, 248, 255, 0.85);">
-                    <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Notice
+                <td class="menu-button" id="menuButton1" align="center" style="color: rgba(240, 248, 255, 0.85);margin-left: auto;
+    margin-right: auto;">
+                    <p  class="cell-link" align="center" style="color: rgba(240, 248, 255, 0.649);padding: 5%;">Notice
                     </p>
                 </td>
 
-                <td>
-                    <p>
-                        <a href="https://drive.google.com/drive/folders/1sl_cPO2lI276il35NZyIN7vr6Pc6HuSg"
+                <td style="margin-left: auto;
+    margin-right: auto;">
+                    <!-- <p  class="cell-link" align="center" style="color: rgba(240, 248, 255, 0.649);padding: 5%;"> -->
+                        <a  class="cell-link" href="https://drive.google.com/drive/folders/1sl_cPO2lI276il35NZyIN7vr6Pc6HuSg"
                             target="_blank">
                             Departments info
                         </a>
-                    </p>
+                    <!-- </p> -->
                 </td>
             </tr>
             <tr>
-                <td>
-                    <p>
-                        <a href="https://drive.google.com/drive/folders/1tCrwALNcqG9GZ_r3mVi3MFbu5mlLE2Xe?usp=drive_link"
+                <td style="margin-left: auto;
+    margin-right: auto;">
+                    <!-- <p> -->
+                        <a  class="cell-link" href="https://drive.google.com/drive/folders/1tCrwALNcqG9GZ_r3mVi3MFbu5mlLE2Xe?usp=drive_link"
                             target="_blank">
                             CSE Course Lists
                         </a>
-                    </p>
+                    <!-- </p> -->
                 </td>
 
-                <td>
-                    <p>
-                        <a href="https://drive.google.com/drive/folders/1E_FYLX-RMFZEqeZHn0Nms2OUSJmLXUQH"
+                <td style="margin-left: auto;
+    margin-right: auto;">
+                    <!-- <p> -->
+                        <a  class="cell-link" href="https://drive.google.com/drive/folders/1E_FYLX-RMFZEqeZHn0Nms2OUSJmLXUQH"
                             target="_blank">
                             CSE Course Outlines
                         </a>
-                    </p>
+                    <!-- </p> -->
                 </td>
             </tr>
             <tr>
-                <td>
-                    <p>
-                        <a href="https://drive.google.com/drive/folders/1HKkXWBglI1Ffb22k7z7qLFqQqWlEcaI1"
+                <td style="margin-left: auto;
+    margin-right: auto;">
+                    <!-- <p> -->
+                        <a class="cell-link" href="https://drive.google.com/drive/folders/1HKkXWBglI1Ffb22k7z7qLFqQqWlEcaI1"
                             target="_blank">
                             Class Routine format
                         </a>
-                    </p>
+                    <!-- </p> -->
                 </td>
 
-                <td>
-                    <p>
-                        <a href="https://drive.google.com/drive/folders/1i0UUsgy68Nypc2ylPsaB-Teljkf0NSUD?usp=drive_link"
+                <td style="margin-left: auto;
+    margin-right: auto;">
+                    <!-- <p> -->
+                        <a class="cell-link" href="https://drive.google.com/drive/folders/1i0UUsgy68Nypc2ylPsaB-Teljkf0NSUD?usp=drive_link"
                             target="_blank">
                             Questions
                         </a>
-                    </p>
+                    <!-- </p> -->
                 </td>
             </tr>
             <tr>
-                <td>
-                    <p>
-                        <a href="https://drive.google.com/drive/folders/1BKYmB_nSw7y0zN7eKkDg6Sgudy66MSwU"
+                <td style="margin-left: auto;
+    margin-right: auto;">
+                    <!-- <p> -->
+                        <a class="cell-link" href="https://drive.google.com/drive/folders/1BKYmB_nSw7y0zN7eKkDg6Sgudy66MSwU"
                             target="_blank">
                             Task Materials
                         </a>
-                    </p>
+                    <!-- </p> -->
                 </td>
 
             </tr>
