--- a/page-depth-01/CP-aux.html
+++ b/page-depth-01/CP-aux.html
@@ -349,7 +349,7 @@
                 <td class="menu-button" id="menuButton1" align="center" style="color: rgba(240, 248, 255, 0.85);margin-left: auto;
     margin-right: auto;">
 
-                    <p  class="cell-link" align="center" style="color: rgba(240, 248, 255, 0.649);padding: 5%;">
+                    <p class="cell-link" align="center" style="color: rgba(240, 248, 255, 0.649);padding: 5%;">
                         Learning Websites
                     </p>
                 </td>
@@ -360,7 +360,7 @@
                 <td class="menu-button" id="menuButton2" align="center" style="color: rgba(240, 248, 255, 0.85);margin-left: auto;
     margin-right: auto;">
 
-                    <p  class="cell-link" align="center" style="color: rgba(240, 248, 255, 0.649);padding: 5%;">
+                    <p class="cell-link" align="center" style="color: rgba(240, 248, 255, 0.649);padding: 5%;">
                         Programming Videos
                     </p>
                 </td>
@@ -369,7 +369,7 @@
                 <td class="menu-button" id="menuButton4" align="center" style="color: rgba(240, 248, 255, 0.85);margin-left: auto;
     margin-right: auto;">
 
-                    <p  class="cell-link" align="center" style="color: rgba(240, 248, 255, 0.649);padding: 5%;">Online
+                    <p class="cell-link" align="center" style="color: rgba(240, 248, 255, 0.649);padding: 5%;">Online
                         Judges
                     </p>
                 </td>
@@ -377,13 +377,13 @@
             <tr>
                 <td class="menu-button" id="menuButton4" align="center" style="color: rgba(240, 248, 255, 0.85);margin-left: auto;
     margin-right: auto;">
-                    <p  class="cell-link" align="center" style="color: rgba(240, 248, 255, 0.649);padding: 5%;">
-                        <a style="color: rgba(240, 248, 255, 0.649);"
-                            href="https://drive.google.com/drive/folders/1n8wBkN1nAhpW3Z0eMkU9OlMNaPByp88F?usp=drive_link"
-                            target="_blank">
-                            UITS Contests Archive
-                        </a>
-                    </p>
+                    <!-- <p  class="cell-link" align="center" style="color: rgba(240, 248, 255, 0.649);padding: 5%;"> -->
+                    <a class="cell-link" style="color: rgba(240, 248, 255, 0.649);padding:10%;"
+                        href="https://drive.google.com/drive/folders/1n8wBkN1nAhpW3Z0eMkU9OlMNaPByp88F?usp=drive_link"
+                        target="_blank">
+                        UITS Contests Archive
+                    </a>
+                    <!-- </p> -->
                 </td>
             </tr>
         </table>
